--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "electron-log": "^4.4.7",
     "electron-updater": "^5.0.3",
     "react": "^18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0"
   },
