--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,8 +28,20 @@
     "*.{css,sass,scss}.d.ts": true
   },
   "cSpell.words": [
+    "Amila",
     "arrowdown",
     "arrowup",
-    "SCENECOMP"
+    "asar",
+    "compat",
+    "Defocus",
+    "electronmon",
+    "keybinds",
+    "nsis",
+    "pmmmwh",
+    "SCENECOMP",
+    "teamsupercell",
+    "webm",
+    "webp",
+    "Welihinda"
   ]
 }
